consistent colors, added opacity, fixed buttons

--- a/notebooks/pixelated-SSB.ipynb
+++ b/notebooks/pixelated-SSB.ipynb
@@ -51,7 +51,7 @@
     "# cmap = cmr.eclipse\n",
     "cmap = cmr.viola\n",
     "sample_cmap = 'gray'\n",
-    "icom_line_color = 'cornflowerblue'"
+    "pixelated_ssb_line_color = 'darkgreen'"
    ]
   },
   {
@@ -227,7 +227,7 @@
     "plot_ctf = axs[1].plot(\n",
     "    q_bins,\n",
     "    I_bins,\n",
-    "    color=icom_line_color\n",
+    "    color=pixelated_ssb_line_color\n",
     ")[0]\n",
     "\n",
     "axs[1].axhline(0,color='black',lw=1,linestyle='--')\n",
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "5f4bd5b8-8f78-4bb9-98aa-6d30b0f57687",
    "metadata": {},
    "outputs": [],
@@ -302,8 +302,8 @@
     "style = {'description_width': 'initial'}\n",
     "layout_half = ipywidgets.Layout(width=\"335px\",height=\"30px\")\n",
     "layout_quarter = ipywidgets.Layout(width=\"167px\",height=\"30px\")\n",
-    "kwargs = {'style':style,'layout':layout_half,\"continuous_updating\":False,}\n",
-    "kwargs_quarter = {'style':style,'layout':layout_quarter}\n",
+    "kwargs = {'style':style,'layout':layout_half,\"continuous_update\":False,}\n",
+    "kwargs_quarter = {'style':style,'layout':layout_quarter,\"continuous_update\":False,}\n",
     "\n",
     "C10_slider = ipywidgets.FloatSlider(\n",
     "    value = 0,\n",
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "83ab6cfb-d7c6-4c15-b7de-935788e537af",
    "metadata": {},
    "outputs": [],
@@ -419,22 +419,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "5dcc33f2-9a57-4785-b4f3-ac83b8f2ae62",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0cbb06312ed043fe819e445480f8291d",
+       "model_id": "4d094546c05145b6b88c27cf73cdde2b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(FloatSlider(value=0.0, description='negative defocus, $C_{1,0}$ [Å]', layout=Lay…"
+       "VBox(children=(HBox(children=(FloatSlider(value=0.0, continuous_update=False, description='negative defocus, $…"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
