--- a/notebooks/pixelated-iterative-ptycho.ipynb
+++ b/notebooks/pixelated-iterative-ptycho.ipynb
@@ -64,7 +64,7 @@
     "\n",
     "cmap = cmr.viola\n",
     "sample_cmap = 'gray'\n",
-    "iter_ptycho_line_color = 'mediumvioletred'"
+    "iter_ptycho_line_color = 'darkmagenta'"
    ]
   },
   {
@@ -461,6 +461,7 @@
     "\n",
     "ax_obj.set(xticks=[],yticks=[],title=\"CTF-convolved weak phase object\")\n",
     "\n",
+    "im_obj.set_alpha(0.25)\n",
     "fig.tight_layout()\n",
     "\n",
     "fig.canvas.resizable = False\n",
@@ -552,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "95b1a1e1-6381-4554-b108-84fb91ab5566",
    "metadata": {},
    "outputs": [],
@@ -622,8 +623,8 @@
     "iterate_button.button_style = 'warning'\n",
     "\n",
     "def defocus_wrapper(*args):\n",
-    "    reset_wrapper()\n",
     "    simulate_button.button_style = 'warning'\n",
+    "    reset_wrapper()\n",
     "    im_ctf_ptycho.set_alpha(0.25)\n",
     "    plot_ctf_ptycho.set_alpha(0.25)\n",
     "    im_obj.set_alpha(0.25)\n",
@@ -656,7 +657,9 @@
     "    \"\"\" \"\"\"\n",
     "    ptycho_recon[0] = np.ones((n,n),dtype=np.complex128)\n",
     "    update_ptycho_panel(ptycho_recon[0])\n",
-    "    iterate_button.button_style = 'warning'\n",
+    "    if simulate_button.button_style != 'warning':\n",
+    "        iterate_button.button_style = 'warning'\n",
+    "    im_obj.set_alpha(0.25)\n",
     "    outer_reconstruct_pbar.reset()\n",
     "    inner_reconstruct_pbar.reset()\n",
     "\n",
@@ -701,14 +704,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "f9c3f4ca-1d26-4651-a971-2ba92b774b45",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "538d75454ea740018d3763bf3cd11dec",
+       "model_id": "b5052c7d69b747df86f0190477d5e731",
        "version_major": 2,
        "version_minor": 0
       },
@@ -716,7 +719,7 @@
        "VBox(children=(VBox(children=(HBox(children=(FloatSlider(value=0.0, continuous_update=False, description='nega…"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,6 +746,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "541a8de8-e5ef-489c-85ae-270e6727248a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "063fca31-fdb7-4172-aa4f-a199bb638cea",
    "metadata": {},
    "outputs": [],
    "source": []
