--- a/notebooks/segmented-SSB.ipynb
+++ b/notebooks/segmented-SSB.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2653fe5c-f3c0-4e22-9408-a99c485b25f5",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "id": "419ff450-2a29-4f5e-87a7-5cc70648b4c5",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,9 @@
     "sample_cmap = 'gray'\n",
     "icom_line_color = 'cornflowerblue'\n",
     "iter_ptycho_line_color = 'mediumvioletred'\n",
-    "ssb_line_color = 'olivedrab'"
+    "\n",
+    "pixelated_ssb_line_color = 'darkgreen'\n",
+    "segmented_ssb_line_color = 'yellowgreen'"
    ]
   },
   {
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "id": "7174d1df-5672-48e9-9930-888ad39078fe",
    "metadata": {},
    "outputs": [],
@@ -136,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "id": "82c1144c-7010-4b9d-a67a-72973e36da00",
    "metadata": {},
    "outputs": [],
@@ -159,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "id": "91d6e5e2-d451-4242-8a5b-3fdca5814ed0",
    "metadata": {},
    "outputs": [],
@@ -195,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "id": "7de666e8-0c61-41bb-a8ac-7056504b9a88",
    "metadata": {},
    "outputs": [],
@@ -246,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "id": "dda6054c-2d9c-449c-b0d6-74ffdedada8a",
    "metadata": {},
    "outputs": [],
@@ -314,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "id": "5582e59d-87c4-48ba-8b67-c5a8c47a98aa",
    "metadata": {},
    "outputs": [],
@@ -328,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "id": "c720648a-4b46-41cf-bca4-0a8568e4a587",
    "metadata": {},
    "outputs": [],
@@ -470,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "id": "76b18463-b935-45ff-8335-50e4a15d29b7",
    "metadata": {},
    "outputs": [],
@@ -490,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "id": "1ef2e8b6-4825-43a0-bf34-09546ca17033",
    "metadata": {},
    "outputs": [],
@@ -512,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "id": "82f3fcc2-ae1f-4a96-9beb-f27c7f47c8b5",
    "metadata": {},
    "outputs": [],
@@ -534,8 +536,8 @@
     "im_ctf = ax_ctf.imshow(empty,cmap=cmap)\n",
     "\n",
     "ax_ctf_rad = axs[0,3]\n",
-    "plot_ctf_pixelated = ax_ctf_rad.plot(q_bins_pixelated,I_bins_pixelated,color='k',label='pixelated')[0]\n",
-    "plot_ctf = ax_ctf_rad.plot(np.linspace(0,q_max,n//2 + 1),np.zeros(n//2 + 1),color=ssb_line_color,label='segmented')[0]\n",
+    "plot_ctf_pixelated = ax_ctf_rad.plot(q_bins_pixelated,I_bins_pixelated,color=pixelated_ssb_line_color,label='pixelated SSB')[0]\n",
+    "plot_ctf = ax_ctf_rad.plot(np.linspace(0,q_max,n//2 + 1),np.zeros(n//2 + 1),color=segmented_ssb_line_color,label='segmented SSB')[0]\n",
     "\n",
     "for ax, title in zip(\n",
     "    axs.flatten(),\n",
@@ -616,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "id": "f76ba5fb-d77d-462e-810b-f13424740697",
    "metadata": {},
    "outputs": [],
@@ -769,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "id": "163a770e-5abb-4ab1-a8b2-c93a70d5d43c",
    "metadata": {},
    "outputs": [],
@@ -833,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "id": "17bf2470-4a2e-4bef-ad08-5d49f783e07e",
    "metadata": {},
    "outputs": [],
@@ -941,14 +943,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 53,
    "id": "4f1b0d36-99e8-4384-9f56-405e96bf896f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d45ddfa89f94b9c95f9783d936a2607",
+       "model_id": "3be8ac4f3d854050ab729b52dd9203dc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -956,7 +958,7 @@
        "Output()"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 54,
    "id": "cdf70485-bf65-4c95-99f8-6c1972ea4800",
    "metadata": {},
    "outputs": [],
@@ -1070,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 55,
    "id": "667cd180-c2ad-4e47-8529-e5fcad8e512c",
    "metadata": {},
    "outputs": [],
@@ -1108,14 +1110,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 57,
    "id": "4841e37d-e983-4204-ba48-f56099a1647f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6825825e558b451daefdb21d0bdc078c",
+       "model_id": "4417af5735644181922dc9090d823fbf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1151,7 +1153,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69784c54-7a60-4a60-ab4a-a33449ea264e",
+   "id": "076bc4a2-4d4f-436b-b8c2-83e77adbcda2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23bcf157-b104-4088-8d91-a3252bb3b263",
    "metadata": {},
    "outputs": [],
    "source": []
