--- a/notebooks/segmented-icom.ipynb
+++ b/notebooks/segmented-icom.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "id": "2653fe5c-f3c0-4e22-9408-a99c485b25f5",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "id": "419ff450-2a29-4f5e-87a7-5cc70648b4c5",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,9 @@
     "\n",
     "cmap = cmr.eclipse\n",
     "sample_cmap = 'gray'\n",
-    "icom_line_color = 'cornflowerblue'"
+    "\n",
+    "segmented_icom_line_color = 'cornflowerblue'\n",
+    "pixelated_icom_line_color = 'midnightblue'"
    ]
   },
   {
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "id": "7174d1df-5672-48e9-9930-888ad39078fe",
    "metadata": {},
    "outputs": [],
@@ -131,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "id": "7c8d3654-df49-437d-8d20-3b9804713a0f",
    "metadata": {},
    "outputs": [],
@@ -154,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
    "id": "71d0b5b8-198d-4602-9d49-9b01fa5829b9",
    "metadata": {},
    "outputs": [],
@@ -173,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 22,
    "id": "4146d61d-f9c9-463d-bd4e-8a4cf878070f",
    "metadata": {},
    "outputs": [],
@@ -222,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "id": "12634cda",
    "metadata": {},
    "outputs": [],
@@ -300,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 24,
    "id": "db58b779",
    "metadata": {},
    "outputs": [],
@@ -334,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 25,
    "id": "21f2b02c-6a5b-49fb-9682-981192798244",
    "metadata": {},
    "outputs": [],
@@ -387,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 26,
    "id": "45f7df1f-47b6-4754-abe3-6196941ec5a9",
    "metadata": {},
    "outputs": [],
@@ -411,8 +413,8 @@
     "\n",
     "# analytic CTF radially-averaged\n",
     "ax_ctf_rad = axs[0,3]\n",
-    "plot_ctf_analytic = ax_ctf_rad.plot(q_bins_analytic,I_bins_analytic,color='k',label='pixelated')[0]\n",
-    "plot_ctf = ax_ctf_rad.plot(q_bins_annular, I_bins_annular, color=icom_line_color,label='segmented')[0]\n",
+    "plot_ctf_analytic = ax_ctf_rad.plot(q_bins_analytic,I_bins_analytic,color=pixelated_icom_line_color,label='pixelated iCOM')[0]\n",
+    "plot_ctf = ax_ctf_rad.plot(q_bins_annular, I_bins_annular, color=segmented_icom_line_color,label='segmented iCOM')[0]\n",
     "ax_ctf_rad.legend()\n",
     "\n",
     "# remove ticks, add titles to 2D-plots\n",
@@ -537,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 27,
    "id": "68fa9425",
    "metadata": {},
    "outputs": [],
@@ -677,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 28,
    "id": "d0d505b4",
    "metadata": {},
    "outputs": [],
@@ -808,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 29,
    "id": "0a362424-6bcc-407f-989e-8482d066b853",
    "metadata": {},
    "outputs": [],
@@ -830,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 30,
    "id": "3639cc18-73ed-4008-af56-33a847821dad",
    "metadata": {},
    "outputs": [],
@@ -866,14 +868,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 31,
    "id": "b4e23fec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce4a4ada03614980a9aaff7ed02fc49e",
+       "model_id": "30eaa09e88a344d3b9cd6832aa762b12",
        "version_major": 2,
        "version_minor": 0
       },
@@ -906,14 +908,6 @@
     "    )\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8559d837-6721-406c-b074-e26d16f2f69e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
