--- a/notebooks/segmented-iterative-ptycho.ipynb
+++ b/notebooks/segmented-iterative-ptycho.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "2653fe5c-f3c0-4e22-9408-a99c485b25f5",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "419ff450-2a29-4f5e-87a7-5cc70648b4c5",
    "metadata": {},
    "outputs": [],
@@ -63,8 +63,10 @@
     "\n",
     "cmap = cmr.eclipse\n",
     "sample_cmap = 'gray'\n",
-    "icom_line_color = 'cornflowerblue'\n",
-    "iter_ptycho_line_color = 'mediumvioletred'"
+    "\n",
+    "segmented_icom_line_color = 'cornflowerblue'\n",
+    "segmented_ptycho_line_color = 'orchid'\n",
+    "pixelated_ptycho_line_color = 'darkmagenta'"
    ]
   },
   {
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "7174d1df-5672-48e9-9930-888ad39078fe",
    "metadata": {},
    "outputs": [],
@@ -133,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "ffa668f1-8fa3-4eef-9c68-4d4d081b3817",
    "metadata": {},
    "outputs": [],
@@ -156,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "71d0b5b8-198d-4602-9d49-9b01fa5829b9",
    "metadata": {},
    "outputs": [],
@@ -184,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "2667f3e5-136a-4703-9f74-bd7e91e98a0f",
    "metadata": {},
    "outputs": [],
@@ -224,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "6d620ca7-35bb-4e1c-b34f-02d6e1906e8f",
    "metadata": {},
    "outputs": [],
@@ -250,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "id": "12634cda",
    "metadata": {},
    "outputs": [],
@@ -427,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "7ba8d4e6-6bf2-4f32-ad29-87d6ffb71444",
    "metadata": {},
    "outputs": [],
@@ -450,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "id": "1571ad13-e05c-4f10-bf48-c403dc690d00",
    "metadata": {},
    "outputs": [],
@@ -468,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "16571668-958d-4fe6-bb5f-cef819ebd920",
    "metadata": {},
    "outputs": [],
@@ -490,26 +492,26 @@
     "    (sampling,sampling)\n",
     ")\n",
     "\n",
-    "# Analytical CTF (probe autocorrelation)\n",
-    "ctf_analytic = np.abs(\n",
-    "    np.real(\n",
-    "        np.fft.ifft2(\n",
-    "            np.abs(\n",
-    "                np.fft.fft2(\n",
-    "                    amplitudes_probe[2]\n",
-    "                )\n",
-    "            )**2\n",
-    "        )\n",
-    "    )\n",
-    ")\n",
+    "# # Analytical CTF (probe autocorrelation)\n",
+    "# ctf_analytic = np.abs(\n",
+    "#     np.real(\n",
+    "#         np.fft.ifft2(\n",
+    "#             np.abs(\n",
+    "#                 np.fft.fft2(\n",
+    "#                     amplitudes_probe[2]\n",
+    "#                 )\n",
+    "#             )**2\n",
+    "#         )\n",
+    "#     )\n",
+    "# )\n",
     "\n",
-    "# Radially-averaged CTF and SNR\n",
-    "q_bins_analytic, I_bins_analytic = ctf.radially_average_ctf(ctf_analytic,(sampling,sampling))"
+    "# # Radially-averaged CTF and SNR\n",
+    "# q_bins_analytic, I_bins_analytic = ctf.radially_average_ctf(ctf_analytic,(sampling,sampling))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "id": "adadb014-b74d-4957-b2f8-380277a9a6e3",
    "metadata": {},
    "outputs": [],
@@ -520,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "id": "423a198a-4782-4ac5-915f-95ec474abde5",
    "metadata": {},
    "outputs": [],
@@ -543,10 +545,10 @@
     "\n",
     "# analytic CTF radially-averaged\n",
     "ax_ctf_rad = axs[0,3]\n",
-    "plot_ctf_dpc_analytical = ax_ctf_rad.plot(q_bins_analytic,I_bins_analytic,color='k',label='pixelated iCOM')[0]\n",
+    "# plot_ctf_dpc_analytical = ax_ctf_rad.plot(q_bins_analytic,I_bins_analytic,color='k',label='pixelated iCOM')[0]\n",
     "\n",
-    "plot_ctf_dpc = ax_ctf_rad.plot(q_bins_annular, I_bins_annular, color=icom_line_color,label='segmented iCOM')[0]\n",
-    "plot_ctf_ptycho = ax_ctf_rad.plot(q_bins_annular, np.zeros_like(I_bins_analytic), color=iter_ptycho_line_color,label='segmented ptycho')[0]\n",
+    "plot_ctf_dpc = ax_ctf_rad.plot(q_bins_annular, I_bins_annular, color=segmented_icom_line_color,label='segmented iCOM')[0]\n",
+    "plot_ctf_ptycho = ax_ctf_rad.plot(q_bins_annular, np.zeros_like(I_bins_annular), color=segmented_ptycho_line_color,label='segmented ptycho')[0]\n",
     "ax_ctf_rad.legend()\n",
     "\n",
     "# remove ticks, add titles to 2D-plots\n",
@@ -610,6 +612,12 @@
     "apo_sampling = 19.2 / n  # nm\n",
     "ctf.add_scalebar(ax_apo_obj,length=n//5,sampling=apo_sampling,units=r'nm')\n",
     "\n",
+    "im_ctf_ptycho.set_alpha(0.25)\n",
+    "im_white_noise_obj.set_alpha(0.25)\n",
+    "im_sto_obj.set_alpha(0.25)\n",
+    "im_mof_obj.set_alpha(0.25)\n",
+    "im_apo_obj.set_alpha(0.25)\n",
+    "\n",
     "# fix ipympl canvas from resizing\n",
     "fig.canvas.resizable = False\n",
     "fig.canvas.header_visible = False\n",
@@ -625,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "id": "b9ee0d10-81e7-409f-98e8-3e789f727a34",
    "metadata": {},
    "outputs": [],
@@ -676,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "id": "80821142-9b72-4a66-a841-da4d439ea99e",
    "metadata": {},
    "outputs": [],
@@ -711,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "id": "95b1a1e1-6381-4554-b108-84fb91ab5566",
    "metadata": {},
    "outputs": [],
@@ -822,13 +830,14 @@
     ")\n",
     "\n",
     "def defocus_wrapper(*args):\n",
-    "    reset_wrapper()\n",
+    "    \"\"\" \"\"\"\n",
     "    simulate_button.button_style = 'warning'\n",
+    "    reset_wrapper()\n",
     "    im_ctf_dpc.set_alpha(0.25)\n",
     "    im_ctf_ptycho.set_alpha(0.25)\n",
     "    plot_ctf_dpc.set_alpha(0.25)\n",
     "    plot_ctf_ptycho.set_alpha(0.25)\n",
-    "    plot_ctf_dpc_analytical.set_alpha(0.25)\n",
+    "    # plot_ctf_dpc_analytical.set_alpha(0.25)\n",
     "    im_white_noise_obj.set_alpha(0.25)\n",
     "    im_sto_obj.set_alpha(0.25)\n",
     "    im_mof_obj.set_alpha(0.25)\n",
@@ -847,28 +856,28 @@
     "    intensities[0] = amplitudes_probe[0].reshape((sx,sy,n,n))**2 / n**2\n",
     "    intensities[1] = intensities[0].sum((-1,-2))\n",
     "\n",
-    "    ctf_analytic = np.real(\n",
-    "        np.fft.ifft2(\n",
-    "            np.abs(\n",
-    "                np.fft.fft2(\n",
-    "                    amplitudes_probe[2]\n",
-    "                )\n",
-    "            )**2\n",
-    "        )\n",
-    "    )\n",
+    "    # ctf_analytic = np.real(\n",
+    "    #     np.fft.ifft2(\n",
+    "    #         np.abs(\n",
+    "    #             np.fft.fft2(\n",
+    "    #                 amplitudes_probe[2]\n",
+    "    #             )\n",
+    "    #         )**2\n",
+    "    #     )\n",
+    "    # )\n",
     "    \n",
-    "    # Radially-averaged CTF and SNR\n",
-    "    q_bins_analytic, I_bins_analytic = ctf.radially_average_ctf(ctf_analytic,(sampling,sampling))\n",
-    "    plot_ctf_dpc_analytical.set_ydata(I_bins_analytic)\n",
-    "    plot_ctf_dpc_analytical.set_alpha(1)\n",
+    "    # # Radially-averaged CTF and SNR\n",
+    "    # q_bins_analytic, I_bins_analytic = ctf.radially_average_ctf(ctf_analytic,(sampling,sampling))\n",
+    "    # plot_ctf_dpc_analytical.set_ydata(I_bins_analytic)\n",
+    "    # plot_ctf_dpc_analytical.set_alpha(1)\n",
     "\n",
-    "    update_figure(\"dummy\")\n",
     "\n",
     "    amplitude_values[0] = bin_amplitudes_using_virtual_detectors(\n",
     "        amplitudes_probe[0],\n",
     "        virtual_masks_annular[0],\n",
     "    )\n",
     "    \n",
+    "    update_figure(\"dummy\")\n",
     "    disable_all(False)\n",
     "    iterate_button.button_style = 'warning'\n",
     "    outer_reconstruct_pbar.reset()\n",
@@ -880,13 +889,21 @@
     "    \"\"\" \"\"\"\n",
     "    ptycho_recon[0] = np.ones((n,n),dtype=np.complex128)\n",
     "    update_ptycho_panel(ptycho_recon[0])\n",
-    "    iterate_button.button_style = 'warning'\n",
+    "    if simulate_button.button_style != 'warning':\n",
+    "        iterate_button.button_style = 'warning'\n",
     "    outer_reconstruct_pbar.reset()\n",
     "    inner_reconstruct_pbar.reset()\n",
+    "    \n",
+    "    im_ctf_ptycho.set_alpha(0.25)\n",
+    "    im_white_noise_obj.set_alpha(0.25)\n",
+    "    im_sto_obj.set_alpha(0.25)\n",
+    "    im_mof_obj.set_alpha(0.25)\n",
+    "    im_apo_obj.set_alpha(0.25)\n",
     "\n",
     "reset_button.on_click(reset_wrapper)\n",
     "\n",
     "def disable_all(boolean):\n",
+    "    \"\"\" \"\"\"\n",
     "    inner_collection_angle_slider.disabled = boolean\n",
     "    outer_collection_angle_slider.disabled = boolean\n",
     "    number_of_segments_slider.disabled = boolean\n",
@@ -926,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "id": "bc786741-ac7d-488a-b4e5-14e3c9c81fa7",
    "metadata": {},
    "outputs": [],
@@ -1012,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "id": "0ef3d7a4-fb8b-4e85-ba91-a86b29943f63",
    "metadata": {},
    "outputs": [],
@@ -1033,14 +1050,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "id": "f9c3f4ca-1d26-4651-a971-2ba92b774b45",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c6516145c6bf45b7af74956e1541f901",
+       "model_id": "185ac999307542dbb7efb8c8c429672b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1078,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "636a0a5e-1764-4a59-a605-2a8afa94e257",
+   "id": "ba3b43d9-f788-4b83-a1c0-25088d935cb3",
    "metadata": {},
    "outputs": [],
    "source": []
