--- a/notebooks/segmented-parallax.ipynb
+++ b/notebooks/segmented-parallax.ipynb
@@ -62,7 +62,10 @@
     "\n",
     "cmap = cmr.eclipse\n",
     "sample_cmap = 'gray'\n",
-    "icom_line_color = 'cornflowerblue'"
+    "\n",
+    "segmented_icom_line_color = 'cornflowerblue'\n",
+    "segmented_parallax_line_color = 'darksalmon'\n",
+    "pixelated_parallax_line_color = 'darkred'"
    ]
   },
   {
@@ -491,9 +494,9 @@
     "\n",
     "# CTF radially-averaged\n",
     "ax_ctf_rad = axs[0,3]\n",
-    "plot_ctf = ax_ctf_rad.plot(q_bins_annular, I_bins_annular, color=icom_line_color,label='segmented iCOM')[0]\n",
-    "plot_ctf_parallax_analytic = ax_ctf_rad.plot(q_bins_parallax_analytic,I_bins_parallax_analytic,color='k',label='pixelated parallax')[0]\n",
-    "plot_ctf_parallax = ax_ctf_rad.plot(q_bins_parallax,I_bins_parallax,color='mediumvioletred',label='segmented parallax')[0]\n",
+    "plot_ctf = ax_ctf_rad.plot(q_bins_annular, I_bins_annular, color=segmented_icom_line_color,label='segmented iCOM')[0]\n",
+    "plot_ctf_parallax_analytic = ax_ctf_rad.plot(q_bins_parallax_analytic,I_bins_parallax_analytic,color=pixelated_parallax_line_color,label='pixelated tcBF')[0]\n",
+    "plot_ctf_parallax = ax_ctf_rad.plot(q_bins_parallax,I_bins_parallax,color=segmented_parallax_line_color,label='segmented tcBF')[0]\n",
     "ax_ctf_rad.legend()\n",
     "\n",
     "# remove ticks, add titles to 2D-plots\n",
@@ -961,7 +964,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d796cccd1205483ab4a0d45f80d6b015",
+       "model_id": "e0d63f6d0f3f4f04acadc28a8d8fb74a",
        "version_major": 2,
        "version_minor": 0
       },
