--- a/notebooks/pixelated-iCOM.ipynb
+++ b/notebooks/pixelated-iCOM.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "7019266a-41f6-4dfc-8ded-a8a7289cb45c",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "dd235aa2-fd71-4a1c-8217-31db31a5d1c7",
    "metadata": {},
    "outputs": [],
@@ -51,12 +51,13 @@
     "# cmap = cmr.eclipse\n",
     "cmap = cmr.viola\n",
     "sample_cmap = 'gray'\n",
-    "icom_line_color = 'cornflowerblue'"
+    "\n",
+    "pixelated_icom_line_color = 'midnightblue'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "b1179799-7267-4776-a32c-917a1c8259a1",
    "metadata": {},
    "outputs": [],
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "d3230003-9fb3-4e9e-88b1-9ca724cc23c1",
    "metadata": {},
    "outputs": [],
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "667850ca-2492-45c0-ba70-3f44898f8e1f",
    "metadata": {},
    "outputs": [],
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "b25defd9-28cb-4efc-8da6-2e74b6c87762",
    "metadata": {},
    "outputs": [],
@@ -220,7 +221,7 @@
     "plot_ctf = axs[1].plot(\n",
     "    q_bins,\n",
     "    I_bins,\n",
-    "    color=icom_line_color\n",
+    "    color=pixelated_icom_line_color\n",
     ")[0]\n",
     "\n",
     "axs[1].axhline(0,color='black',lw=1,linestyle='--')\n",
@@ -287,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "5f4bd5b8-8f78-4bb9-98aa-6d30b0f57687",
    "metadata": {},
    "outputs": [],
@@ -335,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "83ab6cfb-d7c6-4c15-b7de-935788e537af",
    "metadata": {},
    "outputs": [],
@@ -412,14 +413,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "5dcc33f2-9a57-4785-b4f3-ac83b8f2ae62",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cab6d462d7dc40e78cf28298d3323633",
+       "model_id": "815728bf38ef4971b8ce5755b10e44b0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -427,7 +428,7 @@
        "VBox(children=(HBox(children=(FloatSlider(value=0.0, description='negative defocus, $C_{1,0}$ [Å]', layout=Lay…"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
