--- a/notebooks/pixelated-parallax.ipynb
+++ b/notebooks/pixelated-parallax.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "cmap = cmr.viola\n",
     "sample_cmap = 'gray'\n",
-    "icom_line_color = 'cornflowerblue'"
+    "pixelated_parallax_line_color = 'darkred'"
    ]
   },
   {
@@ -205,7 +205,7 @@
     "plot_ctf = axs[1].plot(\n",
     "    q_bins,\n",
     "    I_bins,\n",
-    "    color=icom_line_color\n",
+    "    color=pixelated_parallax_line_color\n",
     ")[0]\n",
     "\n",
     "axs[1].axhline(0,color='black',lw=1,linestyle='--')\n",
@@ -413,7 +413,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "41125e65d22742f7bc00524f7584fc58",
+       "model_id": "739e79f256e84c6ba102e79d2d37dfdd",
        "version_major": 2,
        "version_minor": 0
       },
