adding radial bins

--- a/notebooks/segmented-SSB.ipynb
+++ b/notebooks/segmented-SSB.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: SSB Contrast Transfer\n",
+    "title: Segmented SSB\n",
     "authors: [Julie Marie Bekkevold, Georgios Varnavides]\n",
-    "date: 2024-09-30\n",
+    "date: 2025-04-09\n",
     "---"
    ]
   },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "id": "419ff450-2a29-4f5e-87a7-5cc70648b4c5",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "id": "7174d1df-5672-48e9-9930-888ad39078fe",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "id": "82c1144c-7010-4b9d-a67a-72973e36da00",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "91d6e5e2-d451-4242-8a5b-3fdca5814ed0",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "id": "7de666e8-0c61-41bb-a8ac-7056504b9a88",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "id": "dda6054c-2d9c-449c-b0d6-74ffdedada8a",
    "metadata": {},
    "outputs": [],
@@ -296,7 +296,6 @@
     "    \n",
     "    return None\n",
     "\n",
-    "\n",
     "def mask_gamma_using_virtual_detectors(\n",
     "    corner_centered_gamma,\n",
     "    center_centered_masks,\n",
@@ -316,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "id": "5582e59d-87c4-48ba-8b67-c5a8c47a98aa",
    "metadata": {},
    "outputs": [],
@@ -330,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "id": "c720648a-4b46-41cf-bca4-0a8568e4a587",
    "metadata": {},
    "outputs": [],
@@ -472,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "id": "76b18463-b935-45ff-8335-50e4a15d29b7",
    "metadata": {},
    "outputs": [],
@@ -492,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "id": "1ef2e8b6-4825-43a0-bf34-09546ca17033",
    "metadata": {},
    "outputs": [],
@@ -514,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "id": "82f3fcc2-ae1f-4a96-9beb-f27c7f47c8b5",
    "metadata": {},
    "outputs": [],
@@ -618,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "id": "f76ba5fb-d77d-462e-810b-f13424740697",
    "metadata": {},
    "outputs": [],
@@ -661,6 +660,28 @@
     "    value = 0, min = 0, max = 180/4, step = 1,\n",
     "    description = \"rotation offset [°]\",\n",
     "    **kwargs\n",
+    ")\n",
+    "\n",
+    "number_of_rings_slider = ipywidgets.IntSlider(\n",
+    "    value = 1, \n",
+    "    min = 1, \n",
+    "    max = 8, \n",
+    "    step = 1,\n",
+    "    description = \"number of radial rings\",\n",
+    "    **kwargs\n",
+    ")\n",
+    "\n",
+    "rotate_half_the_rings = ipywidgets.ToggleButton(\n",
+    "    value = False,\n",
+    "    description = 'offset radial rings',\n",
+    "    disabled = False,\n",
+    "    layout=ipywidgets.Layout(width=\"155px\",height=\"30px\")\n",
+    ")\n",
+    "\n",
+    "area_toggle = ipywidgets.ToggleButton(\n",
+    "    value = False,\n",
+    "    description = 'distribute by area',\n",
+    "    layout=ipywidgets.Layout(width=\"155px\",height=\"30px\")\n",
     ")\n",
     "\n",
     "def update_outer_collection_angle(change):\n",
@@ -720,6 +741,9 @@
     "    outer_collection_angle_slider.disabled = boolean\n",
     "    number_of_segments_slider.disabled = boolean\n",
     "    rotation_offset_slider.disabled = boolean\n",
+    "    number_of_rings_slider.disabled = boolean\n",
+    "    rotate_half_the_rings.disabled = boolean\n",
+    "    area_toggle.disabled = boolean\n",
     "    defocus_slider.disabled = boolean\n",
     "    # soft_aperture_toggle.disabled = boolean\n",
     "    frequencies_toggle.disabled = boolean\n",
@@ -771,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 14,
    "id": "163a770e-5abb-4ab1-a8b2-c93a70d5d43c",
    "metadata": {},
    "outputs": [],
@@ -793,12 +817,7 @@
     "\n",
     "    ind = n//12 if frequencies_toggle.value else n//8\n",
     "    \n",
-    "    update_virtual_and_pixelated_trotters(\n",
-    "        inner_collection_angle_slider.value,\n",
-    "        outer_collection_angle_slider.value,\n",
-    "        number_of_segments_slider.value,\n",
-    "        rotation_offset_slider.value\n",
-    "    )\n",
+    "    update_virtual_and_pixelated_trotters()\n",
     "\n",
     "    update_pixelated_ctf(\n",
     "        defocus=defocus,\n",
@@ -835,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "id": "17bf2470-4a2e-4bef-ad08-5d49f783e07e",
    "metadata": {},
    "outputs": [],
@@ -943,45 +962,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "id": "4f1b0d36-99e8-4384-9f56-405e96bf896f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3be8ac4f3d854050ab729b52dd9203dc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def update_virtual_and_pixelated_trotters(\n",
-    "    inner_collection_angle,\n",
-    "    outer_collection_angle,\n",
-    "    number_of_segments,\n",
-    "    rotation_offset,\n",
+    "    *args,\n",
     "):\n",
     "    \"\"\" \"\"\"\n",
     "    disable_all(True)\n",
     "    \n",
     "    # compute new datasets\n",
-    "    virtual_masks_annular[0] = annular_segmented_detectors(\n",
-    "        gpts=(n,n),\n",
-    "        sampling=(sampling,sampling),\n",
-    "        n_angular_bins=number_of_segments,\n",
-    "        inner_radius=inner_collection_angle,\n",
-    "        outer_radius=outer_collection_angle,\n",
-    "        rotation_offset=np.deg2rad(rotation_offset),\n",
-    "    )\n",
+    "    _virtual_masks_annular = []\n",
+    "    if area_toggle.value:\n",
+    "        ring_collection_angles = np.linspace(\n",
+    "            inner_collection_angle_slider.value**2,\n",
+    "            outer_collection_angle_slider.value**2,\n",
+    "            num=number_of_rings_slider.value + 1\n",
+    "        )**(1/2)\n",
+    "    else:\n",
+    "        ring_collection_angles = np.linspace(\n",
+    "            inner_collection_angle_slider.value,\n",
+    "            outer_collection_angle_slider.value,\n",
+    "            num=number_of_rings_slider.value + 1\n",
+    "        )\n",
+    "    if rotate_half_the_rings.value:\n",
+    "        ring_rotation = np.deg2rad((180/number_of_segments_slider.value))\n",
+    "    else:\n",
+    "        ring_rotation = 0\n",
+    "    for i in range(1,number_of_rings_slider.value+1):\n",
+    "        j = i-1\n",
+    "        _virtual_masks_annular.append(\n",
+    "            annular_segmented_detectors(\n",
+    "                gpts=(n,n),\n",
+    "                sampling=(sampling,sampling),\n",
+    "                n_angular_bins=number_of_segments_slider.value,\n",
+    "                inner_radius=ring_collection_angles[j],\n",
+    "                outer_radius=ring_collection_angles[i],\n",
+    "                rotation_offset=np.deg2rad(rotation_offset_slider.value) + ring_rotation*(j%2),\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "    virtual_masks_annular[0] = np.vstack(_virtual_masks_annular)\n",
     "    \n",
     "    mask_intensities_using_virtual_detectors(\n",
     "        intensities[0],\n",
@@ -1025,20 +1048,18 @@
     "    disable_all(False)\n",
     "    return None\n",
     "\n",
-    "ipywidgets.interactive_output(\n",
-    "    update_virtual_and_pixelated_trotters,\n",
-    "    {\n",
-    "        'inner_collection_angle':inner_collection_angle_slider,\n",
-    "        'outer_collection_angle':outer_collection_angle_slider,\n",
-    "        'number_of_segments':number_of_segments_slider,\n",
-    "        'rotation_offset':rotation_offset_slider,\n",
-    "    }\n",
-    ")"
+    "inner_collection_angle_slider.observe(update_virtual_and_pixelated_trotters,names='value')\n",
+    "outer_collection_angle_slider.observe(update_virtual_and_pixelated_trotters,names='value')\n",
+    "number_of_segments_slider.observe(update_virtual_and_pixelated_trotters,names='value')\n",
+    "rotation_offset_slider.observe(update_virtual_and_pixelated_trotters,names='value')\n",
+    "number_of_rings_slider.observe(update_virtual_and_pixelated_trotters,names='value')\n",
+    "rotate_half_the_rings.observe(update_virtual_and_pixelated_trotters,names='value')\n",
+    "area_toggle.observe(update_virtual_and_pixelated_trotters,names='value')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 17,
    "id": "cdf70485-bf65-4c95-99f8-6c1972ea4800",
    "metadata": {},
    "outputs": [],
@@ -1072,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "id": "667cd180-c2ad-4e47-8529-e5fcad8e512c",
    "metadata": {},
    "outputs": [],
@@ -1105,19 +1126,20 @@
     "    disable_all(False)\n",
     "    return None\n",
     "\n",
-    "OBF_toggle.observe(update_weights,'value')"
+    "OBF_toggle.observe(update_weights,'value')\n",
+    "update_virtual_and_pixelated_trotters()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "id": "4841e37d-e983-4204-ba48-f56099a1647f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4417af5735644181922dc9090d823fbf",
+       "model_id": "3f04ef125df44166a7702c3953ab4ef0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1141,6 +1163,7 @@
     "                    ipywidgets.HTML(\"<hr>\",layout=ipywidgets.Layout(width=\"640px\")),\n",
     "                    ipywidgets.HBox([inner_collection_angle_slider,outer_collection_angle_slider]),\n",
     "                    ipywidgets.HBox([number_of_segments_slider,rotation_offset_slider]),\n",
+    "                    ipywidgets.HBox([number_of_rings_slider,rotate_half_the_rings,area_toggle]),\n",
     "                    ipywidgets.HTML(\"<hr>\",layout=ipywidgets.Layout(width=\"640px\")),\n",
     "                ]\n",
     "            ),\n",
@@ -1153,15 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "076bc4a2-4d4f-436b-b8c2-83e77adbcda2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23bcf157-b104-4088-8d91-a3252bb3b263",
+   "id": "5885c354-a5fd-4cb8-895e-ee0f116712b2",
    "metadata": {},
    "outputs": [],
    "source": []
