--- a/notebooks/segmented-iterative-ptycho.ipynb
+++ b/notebooks/segmented-iterative-ptycho.ipynb
@@ -6,15 +6,15 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: Virtual Detector Ptychography Contrast Transfer\n",
+    "title: Segmented Iterative Ptychography\n",
     "authors: [Julie Marie Bekkevold, Georgios Varnavides]\n",
-    "date: 2024-09-30\n",
+    "date: 2025-04-09  \n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "2653fe5c-f3c0-4e22-9408-a99c485b25f5",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "419ff450-2a29-4f5e-87a7-5cc70648b4c5",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "7174d1df-5672-48e9-9930-888ad39078fe",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "ffa668f1-8fa3-4eef-9c68-4d4d081b3817",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "71d0b5b8-198d-4602-9d49-9b01fa5829b9",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "2667f3e5-136a-4703-9f74-bd7e91e98a0f",
    "metadata": {},
    "outputs": [],
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "6d620ca7-35bb-4e1c-b34f-02d6e1906e8f",
    "metadata": {},
    "outputs": [],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "id": "12634cda",
    "metadata": {},
    "outputs": [],
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "id": "7ba8d4e6-6bf2-4f32-ad29-87d6ffb71444",
    "metadata": {},
    "outputs": [],
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "1571ad13-e05c-4f10-bf48-c403dc690d00",
    "metadata": {},
    "outputs": [],
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "id": "16571668-958d-4fe6-bb5f-cef819ebd920",
    "metadata": {},
    "outputs": [],
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "id": "adadb014-b74d-4957-b2f8-380277a9a6e3",
    "metadata": {},
    "outputs": [],
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "id": "423a198a-4782-4ac5-915f-95ec474abde5",
    "metadata": {},
    "outputs": [],
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "id": "b9ee0d10-81e7-409f-98e8-3e789f727a34",
    "metadata": {},
    "outputs": [],
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "id": "80821142-9b72-4a66-a841-da4d439ea99e",
    "metadata": {},
    "outputs": [],
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "id": "95b1a1e1-6381-4554-b108-84fb91ab5566",
    "metadata": {},
    "outputs": [],
@@ -760,6 +760,28 @@
     "    value = 0, min = 0, max = 180/4, step = 1,\n",
     "    description = \"rotation offset [°]\",\n",
     "    **kwargs\n",
+    ")\n",
+    "\n",
+    "number_of_rings_slider = ipywidgets.IntSlider(\n",
+    "    value = 1, \n",
+    "    min = 1, \n",
+    "    max = 8, \n",
+    "    step = 1,\n",
+    "    description = \"number of radial rings\",\n",
+    "    **kwargs\n",
+    ")\n",
+    "\n",
+    "rotate_half_the_rings = ipywidgets.ToggleButton(\n",
+    "    value = False,\n",
+    "    description = 'offset radial rings',\n",
+    "    disabled = False,\n",
+    "    layout=ipywidgets.Layout(width=\"155px\",height=\"30px\")\n",
+    ")\n",
+    "\n",
+    "area_toggle = ipywidgets.ToggleButton(\n",
+    "    value = False,\n",
+    "    description = 'distribute by area',\n",
+    "    layout=ipywidgets.Layout(width=\"155px\",height=\"30px\")\n",
     ")\n",
     "\n",
     "def update_outer_collection_angle(change):\n",
@@ -908,6 +930,9 @@
     "    outer_collection_angle_slider.disabled = boolean\n",
     "    number_of_segments_slider.disabled = boolean\n",
     "    rotation_offset_slider.disabled = boolean\n",
+    "    number_of_rings_slider.disabled = boolean\n",
+    "    rotate_half_the_rings.disabled = boolean\n",
+    "    area_toggle.disabled = boolean\n",
     "    batch_size_slider.disabled = boolean\n",
     "    iterations_slider.disabled = boolean\n",
     "    reset_button.disabled = boolean\n",
@@ -943,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "id": "bc786741-ac7d-488a-b4e5-14e3c9c81fa7",
    "metadata": {},
    "outputs": [],
@@ -954,14 +979,37 @@
     "    \"\"\" \"\"\"\n",
     "\n",
     "    # compute new datasets\n",
-    "    virtual_masks_annular[0] = annular_segmented_detectors(\n",
-    "        gpts=(n,n),\n",
-    "        sampling=(sampling,sampling),\n",
-    "        n_angular_bins=number_of_segments_slider.value,\n",
-    "        inner_radius=inner_collection_angle_slider.value,\n",
-    "        outer_radius=outer_collection_angle_slider.value,\n",
-    "        rotation_offset=np.deg2rad(rotation_offset_slider.value),\n",
-    "    )   \n",
+    "    _virtual_masks_annular = []\n",
+    "    if area_toggle.value:\n",
+    "        ring_collection_angles = np.linspace(\n",
+    "            inner_collection_angle_slider.value**2,\n",
+    "            outer_collection_angle_slider.value**2,\n",
+    "            num=number_of_rings_slider.value + 1\n",
+    "        )**(1/2)\n",
+    "    else:\n",
+    "        ring_collection_angles = np.linspace(\n",
+    "            inner_collection_angle_slider.value,\n",
+    "            outer_collection_angle_slider.value,\n",
+    "            num=number_of_rings_slider.value + 1\n",
+    "        )\n",
+    "    if rotate_half_the_rings.value:\n",
+    "        ring_rotation = np.deg2rad((180/number_of_segments_slider.value))\n",
+    "    else:\n",
+    "        ring_rotation = 0\n",
+    "    for i in range(1,number_of_rings_slider.value+1):\n",
+    "        j = i-1\n",
+    "        _virtual_masks_annular.append(\n",
+    "            annular_segmented_detectors(\n",
+    "                gpts=(n,n),\n",
+    "                sampling=(sampling,sampling),\n",
+    "                n_angular_bins=number_of_segments_slider.value,\n",
+    "                inner_radius=ring_collection_angles[j],\n",
+    "                outer_radius=ring_collection_angles[i],\n",
+    "                rotation_offset=np.deg2rad(rotation_offset_slider.value) + ring_rotation*(j%2),\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "    virtual_masks_annular[0] = np.vstack(_virtual_masks_annular)\n",
     "    \n",
     "    com_x, com_y = compute_com_using_virtual_detectors(\n",
     "        intensities[0],\n",
@@ -1024,12 +1072,15 @@
     "outer_collection_angle_slider.observe(update_figure,names='value')\n",
     "number_of_segments_slider.observe(update_figure,names='value')\n",
     "rotation_offset_slider.observe(update_figure,names='value')\n",
+    "number_of_rings_slider.observe(update_figure,names='value')\n",
+    "rotate_half_the_rings.observe(update_figure,names='value')\n",
+    "area_toggle.observe(update_figure,names='value')\n",
     "iterate_button.button_style = 'warning'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "id": "0ef3d7a4-fb8b-4e85-ba91-a86b29943f63",
    "metadata": {},
    "outputs": [],
@@ -1050,14 +1101,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "id": "f9c3f4ca-1d26-4651-a971-2ba92b774b45",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "185ac999307542dbb7efb8c8c429672b",
+       "model_id": "d02549c3cde643829bfc841c4465f61b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1081,9 +1132,11 @@
     "                    ipywidgets.HTML(\"<hr>\",layout=ipywidgets.Layout(width=\"640px\")),\n",
     "                    ipywidgets.HBox([inner_collection_angle_slider,outer_collection_angle_slider]),\n",
     "                    ipywidgets.HBox([number_of_segments_slider,rotation_offset_slider]),\n",
+    "                    ipywidgets.HBox([number_of_rings_slider,rotate_half_the_rings,area_toggle]),\n",
     "                    ipywidgets.HTML(\"<hr>\",layout=ipywidgets.Layout(width=\"640px\")),\n",
     "                    ipywidgets.HBox([batch_size_slider,iterations_slider]),\n",
     "                    ipywidgets.HBox([reset_button,iterate_button,outer_reconstruct_pbar_wrapper,inner_reconstruct_pbar_wrapper]),\n",
+    "                    ipywidgets.HTML(\"<hr>\",layout=ipywidgets.Layout(width=\"640px\")),\n",
     "                ]\n",
     "            ),\n",
     "            fig.canvas\n",
