--- a/notebooks/pixelated-SSB.ipynb
+++ b/notebooks/pixelated-SSB.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "7019266a-41f6-4dfc-8ded-a8a7289cb45c",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "dd235aa2-fd71-4a1c-8217-31db31a5d1c7",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "b1179799-7267-4776-a32c-917a1c8259a1",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "d3230003-9fb3-4e9e-88b1-9ca724cc23c1",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "667850ca-2492-45c0-ba70-3f44898f8e1f",
    "metadata": {},
    "outputs": [],
@@ -198,14 +198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "b25defd9-28cb-4efc-8da6-2e74b6c87762",
    "metadata": {},
    "outputs": [],
    "source": [
     "with plt.ioff():\n",
     "    dpi=72\n",
-    "    fig, axs = plt.subplots(1,3,figsize=(680/dpi,290/dpi),dpi=dpi)\n",
+    "    fig, axs = plt.subplots(1,3,figsize=(640/dpi,270/dpi),dpi=dpi)\n",
     "\n",
     "im_ctf = axs[0].imshow(\n",
     "    np.fft.fftshift(\n",
@@ -287,21 +287,21 @@
     "fig.canvas.header_visible = False\n",
     "fig.canvas.footer_visible = False\n",
     "fig.canvas.toolbar_visible = False\n",
-    "fig.canvas.layout.height = \"300px\"\n",
-    "fig.canvas.layout.width = '680px'\n",
+    "fig.canvas.layout.height = \"280px\"\n",
+    "fig.canvas.layout.width = '640px'\n",
     "None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "5f4bd5b8-8f78-4bb9-98aa-6d30b0f57687",
    "metadata": {},
    "outputs": [],
    "source": [
     "style = {'description_width': 'initial'}\n",
-    "layout_half = ipywidgets.Layout(width=\"335px\",height=\"30px\")\n",
-    "layout_quarter = ipywidgets.Layout(width=\"167px\",height=\"30px\")\n",
+    "layout_half = ipywidgets.Layout(width=\"320px\",height=\"30px\")\n",
+    "layout_quarter = ipywidgets.Layout(width=\"160px\",height=\"30px\")\n",
     "kwargs = {'style':style,'layout':layout_half,\"continuous_update\":False,}\n",
     "kwargs_quarter = {'style':style,'layout':layout_quarter,\"continuous_update\":False,}\n",
     "\n",
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "83ab6cfb-d7c6-4c15-b7de-935788e537af",
    "metadata": {},
    "outputs": [],
@@ -419,14 +419,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "5dcc33f2-9a57-4785-b4f3-ac83b8f2ae62",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d094546c05145b6b88c27cf73cdde2b",
+       "model_id": "f76b9e572d134c6c86cdc3121e6cbb7a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -434,13 +434,13 @@
        "VBox(children=(HBox(children=(FloatSlider(value=0.0, continuous_update=False, description='negative defocus, $…"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#| label: app:ssb_analytic\n",
+    "#| label: app:pixelated_ssb\n",
     "ipywidgets.VBox(\n",
     "    [\n",
     "        ipywidgets.HBox([C10_slider,C30_slider]),\n",
@@ -454,6 +454,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4bf4e99e-14fb-4157-be51-68b2be91232f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c425423d-28a2-45cd-a5c9-1cbcddb76d62",
    "metadata": {},
    "outputs": [],
    "source": []
