--- a/notebooks/pixelated-parallax.ipynb
+++ b/notebooks/pixelated-parallax.ipynb
@@ -183,7 +183,7 @@
    "source": [
     "with plt.ioff():\n",
     "    dpi=72\n",
-    "    fig, axs = plt.subplots(1,3,figsize=(680/dpi,290/dpi),dpi=dpi)\n",
+    "    fig, axs = plt.subplots(1,3,figsize=(640/dpi,270/dpi),dpi=dpi)\n",
     "\n",
     "im_ctf = axs[0].imshow(\n",
     "    np.fft.fftshift(\n",
@@ -262,8 +262,8 @@
     "fig.canvas.header_visible = False\n",
     "fig.canvas.footer_visible = False\n",
     "fig.canvas.toolbar_visible = False\n",
-    "fig.canvas.layout.height = \"300px\"\n",
-    "fig.canvas.layout.width = '680px'\n",
+    "fig.canvas.layout.height = \"280px\"\n",
+    "fig.canvas.layout.width = '640px'\n",
     "None"
    ]
   },
@@ -275,8 +275,8 @@
    "outputs": [],
    "source": [
     "style = {'description_width': 'initial'}\n",
-    "layout_half = ipywidgets.Layout(width=\"335px\",height=\"30px\")\n",
-    "layout_quarter = ipywidgets.Layout(width=\"167px\",height=\"30px\")\n",
+    "layout_half = ipywidgets.Layout(width=\"320px\",height=\"30px\")\n",
+    "layout_quarter = ipywidgets.Layout(width=\"160px\",height=\"30px\")\n",
     "kwargs = {'style':style,'layout':layout_half}\n",
     "kwargs_quarter = {'style':style,'layout':layout_quarter}\n",
     "\n",
@@ -406,14 +406,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "5dcc33f2-9a57-4785-b4f3-ac83b8f2ae62",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "739e79f256e84c6ba102e79d2d37dfdd",
+       "model_id": "eb5c674f71e44a899ade41e4fe82d9a7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -421,13 +421,13 @@
        "VBox(children=(HBox(children=(FloatSlider(value=-128.0, description='negative defocus, $C_{1,0}$ [Å]', layout=…"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#| label: app:parallax_analytic\n",
+    "#| label: app:pixelated_parallax\n",
     "ipywidgets.VBox(\n",
     "    [\n",
     "        ipywidgets.HBox([C10_slider,C30_slider]),\n",
